--- a/manual/luatex-nodes.tex
+++ b/manual/luatex-nodes.tex
@@ -1877,7 +1877,7 @@ word boundaries are possible).
 
 \startfunctioncall
 node.unprotect_glyph(<node> n)
-node.unprotect_glyphs(<node> n,[<node> n])
+node.unprotect_glyphs(<node> n,[<node> ,m])
 \stopfunctioncall
 
 Subtracts 256 from all glyph node subtypes. This and the next function are
@@ -1891,7 +1891,7 @@ processing. The second argument is optional and indicates the end of a range.
 
 \startfunctioncall
 node.protect_glyph(<node> n)
-node.protect_glyphs(<node> n,[<node> n])
+node.protect_glyphs(<node> n,[<node> m])
 \stopfunctioncall
 
 Adds 256 to all glyph node subtypes in the node list starting at \type {n},
@@ -2195,8 +2195,8 @@ number often is reported when you print node related information. You go from
 userdata nodes and there numeric references and back with:
 
 \startfunctioncall
-<integer> d = node.todirect(<node> n))
-<node> n = node.tonode(<integer> d))
+<integer> d = node.direct.todirect(<node> n))
+<node> n = node.direct.tonode(<integer> d))
 \stopfunctioncall
 
 The userdata model is rather robust as it is a virtual interface with some
@@ -2437,8 +2437,8 @@ consistency. You can of course always define additional accessors using \type
 \supported {subtypes}                \yes \nop
 \supported {subtype}                 \yes \nop
 \supported {tail}                    \yes \yes
-\supported {todirect}                \yes \yes
-\supported {tonode}                  \yes \yes
+\supported {todirect}                \nop \yes
+\supported {tonode}                  \nop \yes
 \supported {tostring}                \yes \yes
 \supported {traverse_char}           \yes \yes
 \supported {traverse_glyph}          \yes \yes
