Fixed manual (J. Friedrich).

--- a/manual/luatex-nodes.tex
+++ b/manual/luatex-nodes.tex
@@ -1321,7 +1321,7 @@ creates a node at the \TEX\ level.
 \libindex{flush_node}
 \libindex{flush_list}
 
-The next one the node \type {n} from \TEX's memory. Be careful: no checks are
+The next one removes the node \type {n} from \TEX's memory. Be careful: no checks are
 done on whether this node is still pointed to from a register or some \type
 {next} field: it is up to you to make sure that the internal data structures
 remain correct.
