--- a/manual/luatex-fontloader.tex
+++ b/manual/luatex-fontloader.tex
@@ -225,7 +225,7 @@ by fontloader while applying the AFM file. On success, \type {nil} is returned.
 As mentioned earlier, the return value of \type {fontloader.open} is a userdata
 object. One way to have access to the actual metrics is to call \type
 {fontloader.to_table} on this object, returning the table structure that is
-explained in the following sections. In teh following sections we will not
+explained in the following sections. In the following sections we will not
 explain each field in detail. Most fields are self descriptive and for the more
 technical aspects you need to consult the relevant font references.
 
@@ -911,7 +911,7 @@ space|-|separated string of glyph names in this class.
 
 \startsubsection[title={\type {math}}]
 
-The math table has the variables that are also discussed in the chapter aboout
+The math table has the variables that are also discussed in the chapter about
 math: \type {ScriptPercentScaleDown}, \type {ScriptScriptPercentScaleDown}, \type
 {DelimitedSubFormulaMinHeight}, \type {DisplayOperatorMinHeight}, \type
 {MathLeading}, \type {AxisHeight}, \type {AccentBaseHeight}, \type
@@ -970,7 +970,6 @@ The \type {scripts} subtable:
 \NC \type{lang}             \NC table   \NC \NC \NR
 \LL
 \stoptabulate
-
 
 The \type {lang} subtable:
 
