Fixed manual: [set|get]omitinfodict -> [set|get]omitinfo (J. Friedrich).

--- a/manual/luatex-backend.tex
+++ b/manual/luatex-backend.tex
@@ -125,7 +125,7 @@ after the \PDFTEX\ equivalents.
 \stopsubsection
 
 \startsubsection[title={\type {[set|get]suppressoptionalinfo}, \type {[set|get]trailerid},
-\type {[set|get]omitcidset}, \type {[set|get]omitinfodict} and \type {[set|get]omitmediabox}}]
+\type {[set|get]omitcidset}, \type {[set|get]omitinfo} and \type {[set|get]omitmediabox}}]
 
 \topicindex{\PDF+options}
 \topicindex{\PDF+trailer}
@@ -134,7 +134,7 @@ after the \PDFTEX\ equivalents.
 \libindex{gettrailerid}            \libindex{settrailerid}
 \libindex{getomitcidset}           \libindex{setomitcidset}
 \libindex{getomitcharset}          \libindex{setomitcharset}
-\libindex{getomitinfodict}         \libindex{setomitinfodict}
+\libindex{getomitinfo}             \libindex{setomitinfo}
 \libindex{getomitmediabox}         \libindex{setomitmediabox}
 
 The optional info bitset (a number) determines what kind of info gets flushed.
