--- a/manual/luatex-nodes.tex
+++ b/manual/luatex-nodes.tex
@@ -2490,9 +2490,9 @@ number, for a glue, kern, hlist, vlist, rule and math nodes as well as glyph
 nodes (although this last one is not used in native \SYNCTEX).
 
 \startfunctioncall
-node.set_synctex_fields(<integer> f, <integer> l)
+node.direct.set_synctex_fields(<integer> n, <integer> f, <integer> l)
 <integer> f, <integer> l =
-    node.get_synctex_fields(<node> n)
+    node.direct.get_synctex_fields(<integer> n)
 \stopfunctioncall
 
 Of course you need to know what you're doing as no checking on sane values takes
