Fixed several typos (J. Friedrich).

--- a/manual/luatex-nodes.tex
+++ b/manual/luatex-nodes.tex
@@ -2391,7 +2391,7 @@ consistency. You can of course always define additional accessors using \type
 \supported {mlist_to_hlist}          \yes \nop
 \supported {new}                     \yes \yes
 \supported {next}                    \yes \nop
-\supported {prepend_prevdepth}       \nop \yes
+\supported {prepend_prevdepth}       \yes \yes
 \supported {prev}                    \yes \nop
 \supported {protect_glyphs}          \yes \yes
 \supported {protect_glyph}           \yes \yes
