Fixed a typo in luatex-fontloader.tex (J. Friedrich).

--- a/manual/luatex-fontloader.tex
+++ b/manual/luatex-fontloader.tex
@@ -306,7 +306,7 @@ the documentation are not yet finished):
 \starttabulate[|l|l|p|]
 \DB key                                 \BC type     \NC explanation \NC \NR
 \TB
-\NC \type{table_version}                \NC number   \NC indicates the metrics version (currently~0.3)\NC \NR
+\NC \type{table_version}                \NC string   \NC indicates the metrics version (currently~0.3)\NC \NR
 \NC \type{fontname}                     \NC string   \NC \POSTSCRIPT\ font name\NC \NR
 \NC \type{fullname}                     \NC string   \NC official (human-oriented) font name\NC \NR
 \NC \type{familyname}                   \NC string   \NC family name\NC \NR
