lua.setluaname(n, s) and lua.getluaname(n): fixed mismatch between documentation and implementation (J. Friedrich).

--- a/manual/luatex-tex.tex
+++ b/manual/luatex-tex.tex
@@ -96,7 +96,7 @@ If you want to unset a \LUA\ name, you can assign \type {nil} to it. The functio
 accessors are:
 
 \startfunctioncall
-lua.setluaname(<string> s,<number> n])
+lua.setluaname(<number> n, <string> s)
 <string> s = lua.getluaname(<number> n)
 \stopfunctioncall
 
