--- a/manual/luatex-lua.tex
+++ b/manual/luatex-lua.tex
@@ -169,7 +169,8 @@ in the following order:
     \starttabulate[|c|l|]
         \DB library     \BC functions \NC \NR
         \TB
-        \NC \type {os}  \NC \type {execute} \type {exec} \type {spawn} \type {setenv}
+        \NC \type {os}  \NC \type {execute} \type {exec} \type{kpsepopen}
+                            \type {spawn} \type {setenv}
                             \type {rename} \type {remove} \type {tmpdir} \NC \NR
         \NC \type {io}  \NC \type {popen} \type {output} \type {tmpfile} \NC \NR
         \NC \type {lfs} \NC \type {rmdir} \type {mkdir} \type {chdir} \type {lock}
@@ -198,8 +199,8 @@ in the following order:
 
     The switches \type {--[no-]shell-escape}, \type {--[enable|disable]-write18}, and
     \type {--shell-restricted} have the same effects as in \PDFTEX, and additionally
-    make \type {io.popen()}, \type {os.execute}, \type {os.exec} and \type {os.spawn}
-    adhere to the requested option.
+    make \type {io.popen()}, \type {os.execute}, \type {os.exec}, \type {os.kpsepopen}
+    and \type {os.spawn} adhere to the requested option.
 \stopitem
 
 \startitem
@@ -319,8 +320,8 @@ of the module itself).
 
 \startsubsection[title={Executing programs}]
 
-In keeping with the other \TEX|-|like programs in \TEXLIVE, the two \LUA\ functions
-\type {os.execute} and \type {io.popen}, as well as the two new functions \type
+In keeping with the other \TEX|-|like programs in \TEXLIVE, the \LUA\ functions
+\type {os.execute}, \type{os.kpsepopen} and \type {io.popen}, as well as the two new functions \type
 {os.exec} and \type {os.spawn} that are explained below, take the value of \type
 {shell_escape} and|/|or \type {shell_escape_commands} in account. Whenever
 \LUATEX\ is run with the assumed intention to typeset a document (and by that we
@@ -432,11 +433,12 @@ used as building blocks for other helpers.
 
 \startsubsection[title={Extra \type {os} library functions}]
 
-The \type {os} library has a few extra functions and variables: \libidx {os}
-{selfdir}, \libidx {os} {exec}, \libidx {os} {spawn}, \libidx {os} {setenv},
+The \type {os} library has a few extra functions and
+variables: \libidx {os} {selfdir}, \libidx {os} {exec}, \libidx {os}
+{kpsepopen}, \libidx {os} {spawn}, \libidx {os} {setenv},
 \libidx {os} {env}, \libidx {os} {gettimeofday}, \libidx {os} {times}, \libidx
-{os} {tmpdir}, \libidx {os} {type}, \libidx {os} {name} and \libidx {os} {uname},
-that we will discuss here.
+{os} {tmpdir}, \libidx {os} {type}, \libidx {os} {name} and \libidx
+{os} {uname}, that we will discuss here.
 
 \startitemize
 
@@ -493,6 +495,14 @@ that we will discuss here.
     The original reason for this command is that it cleans out the current
     process before starting the new one, making it especially useful for use in
     \TEXLUA.
+\stopitem
+
+\startitem
+    \type {os.kpsepopen(commandline,[opt])} is similar to \type {io.popen}
+    but with a preliminary check of the  command  by mean of \type{kpse.check_permission}.
+    
+    If the command ran ok, then the return value is the same of \type{io.popen};
+    otherwise it will return the two values \type {nil} and \type {error}.
 \stopitem
 
 \startitem
