--- a/source/texk/web2c/luatexdir/ChangeLog
+++ b/source/texk/web2c/luatexdir/ChangeLog
@@ -1,3 +1,11 @@
+2023-04-25  Luigi Scarso <luigi.scarso@gmail.com> 
+    * new os.kpsepopen -- replace  io.popen if kpse is active.
+    * Luatex 1.16.2
+
+2023-04-18  Luigi Scarso <luigi.scarso@gmail.com> 
+    * lua.setluaname(n, s) and lua.getluaname(n): 
+      fixed mismatch between documentation and implementation (J. Friedrich).
+
 2023-03-30  Luigi Scarso <luigi.scarso@gmail.com> 
     * bugfix for setpdforigin()  (A. Matthias) 
 
