--- a/source/texk/web2c/luatexdir/ChangeLog
+++ b/source/texk/web2c/luatexdir/ChangeLog
@@ -1,4 +1,8 @@
-2023-04-25  Luigi Scarso <luigi.scarso@gmail.com> 
+2023-04-24  Luigi Scarso <luigi.scarso@gmail.com> 
+    * static kpse.check_permissions in os.kpsepopen
+    * Fixed date in ChangeLog
+
+2023-04-23  Luigi Scarso <luigi.scarso@gmail.com> 
     * new os.kpsepopen -- replace  io.popen if kpse is active.
     * Luatex 1.16.2
 
